OpenHealth/force-app/main/default/force-app/main/default/objects/Appointment__c/AppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>AppointmentTime__c</fullName>
    <label>AppointmentTime</label>
    <type>DateTime</type>
</CustomField>