OpenHealth/force-app/main/default/force-app/main/default/objects/Appointment__c/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>