OpenHealth/force-app/main/default/force-app/main/default/objects/Appointment__c/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>